--- a/src/app/pages/credit-request/credit-request.component.css
+++ b/src/app/pages/credit-request/credit-request.component.css
@@ -35,13 +35,17 @@ p, .form-label{
   /* padding: 0 1rem; */
   margin-bottom: 0.7rem;
 }
-.select{
+select{
   width: 100%;
   height: 45px;
   border-radius: 8px;
-  /* padding: 0 1rem; */
+  /*padding: 0 1rem;*/
   font-size: 14px;
+} 
+.form-select{
+  background-color: #deddfa;
 }
+
 .rounded-input {
   width: 100%;
   height: 45px;
