--- a/src/app/pages/select-credit/select-credit.component.html
+++ b/src/app/pages/select-credit/select-credit.component.html
@@ -6,15 +6,15 @@
   ></app-header-entity>
   <div class="container">
     <div *ngIf="!showAdditionalFields">
-       <form 
-       [formGroup]="formCredito" 
+       <form
+       [formGroup]="formCredito"
        (ngSubmit)="formCredito.valid && onSubmitProduct()"
        >
         <h1>Crédito</h1>
-        
+
         <select formControlName="credito" class="credito">
           <option value="">Selecciona tu crédito</option>
-          <option *ngFor="let subtipo of subtiposProducto" 
+          <option *ngFor="let subtipo of subtiposProducto"
 
           [value]="subtipo.idSubtipo_Producto">
             {{ subtipo.nombre }}
@@ -48,7 +48,7 @@
           [type]="'submit'"
           [text]="'Simular'"
           [disabled]="formValidation.invalid"
-          (onClickEvent)="goToPage(routes.wallet)"
+          (onClickEvent)="goToPage(routes.conditions); onSubmitCreditType();"
         ></app-btn-cbit>
       </form>
     </div>
