--- a/src/app/pages/select-credit/select-credit.component.html
+++ b/src/app/pages/select-credit/select-credit.component.html
@@ -48,7 +48,7 @@
           [type]="'submit'"
           [text]="'Simular'"
           [disabled]="formValidation.invalid"
-          (onClickEvent)="goToPage(routes.wallet)"
+          (onClickEvent)="goToPage(routes.conditions)"
         ></app-btn-cbit>
       </form>
     </div>
