--- a/src/app/pages/credit-conditions/credit-conditions.component.html
+++ b/src/app/pages/credit-conditions/credit-conditions.component.html
@@ -6,40 +6,40 @@
             ></app-header-cbit>
     </div>
     <div class="tx-titulo">
-        <p class="credit-type">{{ creditDataForm.nombreSubtipoP }}</p>
+        <p class="credit-type">{{ subtipoProductoCNombre }}</p>
         <p class="text-simu">Simulación</p>
     </div>
     <div class="container">
         <div class="info-values">
-            <div class="tx-monto-sm">{{ creditDataForm.montoC | currency:''}}</div>
+            <div class="tx-monto-sm">{{ creditData.montoCredito | currency:''}}</div>
             <div class="tx-monto">Monto</div>
         </div>
         <div class="info-value-cuota">
-            <div class="tx-monto-cuota">{{creditDataForm.cuotaMensual | currency:''}}</div>
+            <div class="tx-monto-cuota">{{creditData.cuotaMensual | currency:''}}</div>
             <div class="tx-cuota">Tu cuota mensual aproximada más seguro de vida
                 <span class="tx-vl-seguro">
-                    {{ creditDataForm.valorSeguro | currency:''}}
+                    {{ creditData.valorSeguro | currency:''}}
                 </span>
             </div>
         </div>
         <div class="inf-tasa-ea">
-            <div class="vl-tasa-ea">{{ creditDataForm.tasaEA }} %</div>
+            <div class="vl-tasa-ea">{{ creditData.tasaEA }} %</div>
             <div class="tx-tasa-ea">Tasa Efectivo Anual</div>
         </div>
         <div class="inf-cuota">
-            <div class="vl-cuota">{{ creditDataForm.plazoC }} meses</div>
+            <div class="vl-cuota">{{ creditData.plazo }} meses</div>
             <div class="tx-cuotas">Duración en meses</div>
         </div>
         <div class="inf-tasa-mv">
-            <div class="vl-tasa-mv">{{ creditDataForm.tasaMV }} %</div>
+            <div class="vl-tasa-mv">{{ creditData.tasaMV }} %</div>
             <div class="tx-tasa-mv">Tasa Mensual Vencida</div>
         </div>
         <div class="inf-vtua">
-            <div class="vl-tasa-vtua">{{ creditDataForm.vtua | currency:'' }}</div>
+            <div class="vl-tasa-vtua">{{ creditData.vtua | currency:'' }}</div>
             <div class="tx-tasa-vtua">VTUA total en pesos</div>
         </div>
         <div class="info-deuda-t">
-            <div class="vl-deuda-t">{{ creditDataForm.pagoTotal | currency:'' }}</div>
+            <div class="vl-deuda-t">{{ creditData.pagoTotal | currency:'' }}</div>
             <div class="tx-deuda-t">Pago total</div>
         </div>
         <div class="tx-sg-vida">Todos los creditos tiene seguro de vida
