Se ajusta credit-request para que mande la información registrado a credit-verify a traves del LocalStorage

--- a/src/app/pages/credit-request/credit-request.component.html
+++ b/src/app/pages/credit-request/credit-request.component.html
@@ -57,7 +57,7 @@
         <app-btn-cbit 
         [text]="'Continuar'"
         [disabled]="formSolicitudCredito.invalid"
-        (onClickEvent)="goToPage(routes.creditVerify)"
+        (onClickEvent)="goToPage(routes.creditVerify);onSubmitCreditRequest()"
         ></app-btn-cbit>
     </div>
 </body>
