Se corrigen alteraciones en select-credit

--- a/src/app/pages/credit-request/credit-request.component.html
+++ b/src/app/pages/credit-request/credit-request.component.html
@@ -1,6 +1,8 @@
 <body>
-    <app-header-cbit (onClickEventBack)="goToPage(routes.back)"
-        (onClickEventHelp)="goToPage(routes.help)"></app-header-cbit>
+    <app-header-cbit 
+    (onClickEventBack)="goToPage(routes.back)"
+    (onClickEventHelp)="goToPage(routes.help)">
+    </app-header-cbit>
     <div>
         <h1 class="titulo">Completa los siguientes datos</h1>
         <app-indicator></app-indicator>
