En credit disburse.ts, se crea metodo que trae fecha actual y se incluye en html

--- a/src/app/pages/credit-disburse/credit-disburse.component.html
+++ b/src/app/pages/credit-disburse/credit-disburse.component.html
@@ -16,7 +16,7 @@
           <div class="tittle">Duración en meses</div>
           <div class="tx-value">{{creditData.cuotaMensual}}</div>
           <div class="tittle">Fecha y hora de desembolso</div>
-          <div class="tx-value">28/06/2024  14:06:35</div>
+          <div class="tx-value">{{obtenerFechaHoraActual()}}</div>
           <div class="tittle">Cuenta de desembolso</div>
           <div class="tx-value">0013-97673-7445</div>
           <div class="tittle">Tasa Efectivo Anual</div>
