--- a/src/app/pages/credit-disburse/credit-disburse.component.html
+++ b/src/app/pages/credit-disburse/credit-disburse.component.html
@@ -3,20 +3,20 @@
       <app-header-cbit></app-header-cbit>
   </div>
   <div class="container-indicator">
-      <h1 class="titulo">Su crédito {{creditData.tasaEA}} fue desembolsado</h1>
+      <h1 class="titulo">Su {{ subtipoProductoCNombre }} fue desembolsado</h1>
       <app-indicator></app-indicator>
   </div>
 
   <div class="container">
       <div class="info-values">
           <div class="tittle">Producto</div>
-          <div class="tx-value">Crédito {{creditData?.subtipoProductoC?.nombre}} movil</div>
+          <div class="tx-value">{{ subtipoProductoCNombre }} móvil</div>
           <div class="tittle">Monto del credito</div>
-          <div class="tx-value">{{creditData.montoCredito}}</div>
+          <div class="tx-value">{{creditData.montoCredito|currency}}</div>
           <div class="tittle">Duración en meses</div>
-          <div class="tx-value">{{creditData.cuotaMensual}}</div>
+          <div class="tx-value">{{creditData.plazo}} Meses</div>
           <div class="tittle">Fecha y hora de desembolso</div>
-          <div class="tx-value">{{obtenerFechaHoraActual()}}</div>
+          <div class="tx-value">{{ fechaHoraActual }}</div>
           <div class="tittle">Cuenta de desembolso</div>
           <div class="tx-value">0013-97673-7445</div>
           <div class="tittle">Tasa Efectivo Anual</div>
@@ -24,10 +24,10 @@
           <div class="tittle">Tasa Mensual Vencida </div>
           <div class="tx-value">{{ creditData.tasaMV }}% M.V.</div>
           <div class="info-seguro">
-              <div class="tx-monto-cuota">{{ creditData.valorSeguro | currency:''}}</div>
+              <div class="tx-monto-cuota">{{ creditData.cuotaMensual | currency:''}}</div>
               <div class="tx-monto">Tu cuota mensual aproximada mas seguro de vida
                   <span class="tx-vl-seguro">
-                      [$2.140]
+                      {{ creditData.valorSeguro | currency }}
                   </span>
               </div>
           </div>
