--- a/src/app/pages/credit-verify/credit-verify.component.html
+++ b/src/app/pages/credit-verify/credit-verify.component.html
@@ -56,7 +56,7 @@
     <app-btn-cbit
         [text]="'Continuar'"
         [type]="'button'"
-        (onClickEvent)="goToPage(routes.accept)"
+        (onClickEvent)="evaluateAppliCredit()"
     >
     </app-btn-cbit>
   </body>
