--- a/src/app/pages/credit-verify/credit-verify.component.html
+++ b/src/app/pages/credit-verify/credit-verify.component.html
@@ -48,7 +48,7 @@
                   {{datosCredito.cuotaMensual | currency}} 
                 </p>
                 <p class="valores">Tú cuota mensual aproximada</p>
-                <p class="valores">mas seguro de vida <a class="seguro1">$2.140</a></p>
+                <p class="valores">mas seguro de vida <a class="seguro1">{{datosCredito.valorSeguro | currency}} </a></p>
             </div>
         </div>
         
