--- a/src/app/pages/credit-preapproved/credit-preapproved.component.html
+++ b/src/app/pages/credit-preapproved/credit-preapproved.component.html
@@ -10,20 +10,20 @@
             <div class="header">
                 <p class="titulo3">Crédito pre-aprobado</p>
                 <img class="check" src="../../../assets/icon/check.svg" />
-                <p>Acerquese a la oficina [Banco] mas cercana para terminar su proceso</p>
+                <p>Acerquese a la oficina {{datosCredito.entidadF.nombre}} mas cercana para terminar su proceso</p>
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  $2.977.318
+                  {{datosCredito.vtua | currency}}
                 </p>
                 <p class="valores">VTUA% en E.A.</p>
             </div>
             <div class="campo">
                 <p class="titulo2">
-                  $246.920
+                  {{datosCredito.cuotaMensual | currency}} 
                 </p>
                 <p class="valores">Tú cuota mensual aproximada</p>
-                <p class="valores">mas seguro de vida <a class="seguro1">$2.140</a></p>
+                <p class="valores">mas seguro de vida <a class="seguro1">{{datosCredito.valorSeguro | currency}}</a></p>
             </div>
         </div>
         
