Se corrije error de llamado de variables en credit-request

--- a/src/app/pages/credit-request/credit-request.component.html
+++ b/src/app/pages/credit-request/credit-request.component.html
@@ -60,7 +60,7 @@
                 <select 
                     class="form-select" 
                     aria-label="" 
-                    formControlName="docCity"
+                    formControlName="ciudadDomicilio"
                 >
                     <option selected disabled>Selecciona una opción</option>
                     <option *ngFor="let ciudad of ciudadesPorDep" 
