se crea el modal de seguro de vida

--- a/src/app/pages/credit-conditions/credit-conditions.component.html
+++ b/src/app/pages/credit-conditions/credit-conditions.component.html
@@ -43,7 +43,7 @@
             <div class="tx-deuda-t">Pago total</div>
         </div>
         <div class="tx-sg-vida">Todos los creditos tiene seguro de vida
-            <i class="bi bi-info-circle" (click)="goToPage(routes.info)"></i>
+            <i class="bi bi-info-circle" (click)="openModal()"></i>
         </div>
         <div class="inf-ayuda">
             <div class="tx-inf-ayuda">¿Recibiste ayuda de tu asesor?</div>
