Se corrijen estilos de credit-request y validaciones de campos en select-credit

--- a/src/app/pages/credit-request/credit-request.component.html
+++ b/src/app/pages/credit-request/credit-request.component.html
@@ -56,7 +56,7 @@
               </div>
 
             <div class="campos-form">
-                <label class="form-label" for="formControlName">Ciudad donde vive</label>
+                <label class="city-label" for="formControlName">Ciudad donde vive</label>
                 <select 
                     class="form-select" 
                     aria-label="" 
