--- a/src/app/pages/credit-request/credit-request.component.css
+++ b/src/app/pages/credit-request/credit-request.component.css
@@ -25,7 +25,15 @@ p, .form-label{
   font-family: "Open Sans", sans-serif;
   color: #6D6464;
   font-weight: bold;
-  margin-top: 1rem;
+  margin-top: 1rem; 
+  margin-bottom: 0;
+}
+
+.city-label{
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  color: #6D6464;
+  font-weight: bold;
   margin-bottom: 0;
 }
 
