se modifica indicator.ts, se añade variable input, la cual se recive en cada uno de los componentes padres para marcar el paso de solicitud de crédito

--- a/src/app/pages/credit-approved/credit-approved.component.html
+++ b/src/app/pages/credit-approved/credit-approved.component.html
@@ -5,7 +5,7 @@
     ></app-header-cbit>
     <div>
       <h1 class="titulo"> Crédito Aprobado </h1>
-      <app-indicator></app-indicator>
+      <app-indicator [completados]="3"></app-indicator>
     </div>
     <div class="container" #voucherContent>
         <div class="detalleVoucher">
