--- a/src/app/pages/credit-disburse/credit-disburse.component.html
+++ b/src/app/pages/credit-disburse/credit-disburse.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="container-indicator">
       <h1 class="titulo">Su {{ subtipoProductoCNombre }} fue desembolsado</h1>
-      <app-indicator></app-indicator>
+      <app-indicator [completados]="3"></app-indicator>
   </div>
 
   <div class="container">
