--- a/src/app/pages/credit-verify/credit-verify.component.html
+++ b/src/app/pages/credit-verify/credit-verify.component.html
@@ -3,9 +3,9 @@
       (onClickEventBack)="goToPage(routes.back)"
       (onClickEventHelp)="goToPage(routes.help)"
     ></app-header-cbit>
+    <h1 class="titulo"> Verifique las condiciones de su crédito </h1>
+    <app-indicator [completados]="2"></app-indicator>
     <div class="container" #voucherContent>
-        <h1 class="titulo"> Verifique las condiciones de su crédito </h1>
-        <app-indicator></app-indicator>
         <div class="detalleVoucher">
             <div class="campo">
                 <p class="total-pagado">
@@ -45,13 +45,13 @@
             </div>
             <div class="campo">
                 <p class="titulo2">
-                  {{datosCredito.cuotaMensual | currency}} 
+                  {{datosCredito.cuotaMensual | currency}}
                 </p>
                 <p class="valores">Tú cuota mensual aproximada</p>
                 <p class="valores">mas seguro de vida <a class="seguro1">{{datosCredito.valorSeguro | currency}} </a></p>
             </div>
         </div>
-        
+
     </div>
     <app-btn-cbit
         [text]="'Continuar'"
