en my-products, el bóton de solicitar productos en los 4 tipos de productos se habilita solamente para tipo de producto crédito (flujo de crédito actual)

--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.css
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.css
@@ -17,6 +17,10 @@ p {
   .btn-adicionar {
     cursor: pointer;
   }
+    .disabled {
+      pointer-events: none;
+      opacity: 0.5;
+    }
   .nombreTipo, .btn-adicionar {
     display: flex;
     align-items: center;
