Se soluciona: en my-products (el filtro cuando del search cuando se digitaban credito sin tilde no daba resultados, la validación del mismo search cuando no habia resultados aparecia independientemente de si encontraba algo o no), en login (el select el testo del input del tipo de documento por el mensaje seleccione tipo de documento no salia)

--- a/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
+++ b/src/app/components/lists/list-product-vertical/list-product-vertical.component.html
@@ -12,8 +12,8 @@
         </div>
         <div
           class="btn-adicionar"
-          [ngClass]="{'disabled': type.nombreTipo !== 'Crédito'}"
-          (click)="type.nombreTipo === 'Crédito' ? goToPage(routes.requestProduct) : null"
+          [ngClass]="{'disabled': type.idTipo_Producto !== 4}"
+          (click)="type.idTipo_Producto === 4 ? goToPage(routes.requestProduct) : null"
         >
           <i class="bi bi-plus-circle-fill"></i>
           <p class="txt-solicitar">Solicitar productos</p>
@@ -44,6 +44,7 @@
     </div>
   </div>
 </div>
-<p class="texto" *ngIf="(typesProducts | filterCategory : txtFilterProduct| filterProductByEntityF: txtFilterProduct).length == 0">
+<p class="texto" *ngIf="(typesProducts | filterCategory : txtFilterProduct).length == 0">
   No hay resultados
 </p>
+
