se agrega product-proposals(se elavora html y css), se verifican ruteos según la modificación del flujo de solicitud de crédito

--- a/src/app/pages/select-credit/select-credit.component.html
+++ b/src/app/pages/select-credit/select-credit.component.html
@@ -1,9 +1,8 @@
 <body>
-  <app-header-entity
+  <app-header-cbit
     (onClickEventBack)="goToPage(routes.back)"
     (onClickEventHelp)="goToPage(routes.help)"
-    [entity]="selectedEntity"
-  ></app-header-entity>
+  ></app-header-cbit>
   <div class="container">
     <div *ngIf="!showAdditionalFields">
        <form
